增强 Cubox AI 助手：为文章分析添加了最大长度功能，改进了类别建议的用户界面，并更新了清单名称。重构了提示生成，并增加了对空建议的错误处理。改进弹出式窗口中的输入处理，以获得更好的用户体验。

--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
   "manifest_version": 3,
-  "name": "Cubox AI 分类助手",
+  "name": "Cubox AI 小仓鼠助手",
   "version": "1.0",
   "description": "使用 AI 为 Cubox 文章智能推荐分类",
   "permissions": [
